@@ -37,6 +37,8 @@ git-annex (8.20201130) UNRELEASED; urgency=medium
   * Fix a bug in view filename generation when a metadata value ended with
     "/" (or ":" or "\" on Windows)
   * adjust: Fix some bad behavior when unlocked files use URL keys.
+  * smudge: Fix some bad behavior when git add is run on an unlocked
+    and modified file that used an URL key.
 
  -- Joey Hess <id@joeyh.name>  Mon, 04 Jan 2021 12:52:41 -0400
 
